--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -7,6 +7,10 @@
 
 .footer__description {
     margin: 0;
+    color: #B6BCBF;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
 }
 
 .footer__container {
@@ -22,9 +26,25 @@
 
 .footer__link_text {
     margin-right: 30px;
+    color: #1A1B22;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    transition: .3s ease;
+}
+
+.footer__link_text:hover {
+    opacity: .7;
 }
 
 .footer__link_indent {
     margin-left: 28px;
 }
 
+.footer__link-image {
+    transition: .3s ease;
+}
+
+.footer__link-image:hover {
+    opacity: .7;
+}
