--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,29 +14,54 @@
 .header__logo {
     margin: 0;
     padding: 0;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: inherit;
+    transition: opacity 0.3s ease;
+}
+
+.header__logo:hover {
+    opacity: .7;
+}
+
+.header__title {
+    font-family: 'RobotoSlab', Arial, sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    margin: 0;
+    padding: 0;
 }
 
 .header__nav-bar {
     display: flex;
+    align-items: center;
 }
 
 
 .header__link {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    display: flex;
     text-decoration: none;
     color: inherit;
     margin-right: 32px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    transition: opacity 0.3s ease;
 }
 
-.header__link::after {
-    content: '';
-    bottom: -16px;
-    left: 0;
+.header__link:hover {
+    opacity: .7;
+}
+
+.header__underline {
     position: absolute;
+    bottom: -28px;
+    left: 0;
     width: 100%;
     height: 3px;
     background-color: #FFFFFF;
@@ -46,10 +71,19 @@
     color: #FFFFFF;
     background-image: none; 
     background: transparent;
+    cursor: pointer;
     width: 176px;
     height: 48px;
-    border: 2px solid #FFFFFF;
+    border: 1px solid #FFFFFF;
     border-radius: 100px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    transition: 0.3s ease;
+}
+
+.header__logged-in-button:hover {
+    opacity: .7;
 }
 
 .header__logged-in-button:focus {
@@ -57,6 +91,65 @@
 }
 
 .header__logged-in-button:active {
-    border: 2px solid #000000;
+    opacity: 1;
+    border: 1px solid #ffbcbc;
     border-radius: 100px;
+}
+
+/* Белый */
+/* Белый */
+/* Белый */
+
+.header-white {
+    color: #1A1B22;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
+    padding: 20px 105px 15px 105px;
+    border-bottom: 1px solid rgba(196, 196, 196, 0.7);;
+    width: 100%;
+}
+
+.header-white__underline {
+    position: absolute;
+    bottom: -28px;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #1A1B22;
+}
+
+.header__logged-out-button {
+    display: flex;
+    align-items: center;
+    color: inherit;
+    background-image: none; 
+    background: transparent;
+    cursor: pointer;
+    width: auto;
+    height: 48px;
+    border: 1px solid #1A1B22;
+    border-radius: 100px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 24px;
+    transition: 0.3s ease;
+}
+
+.header__logged-out-button:hover {
+    opacity: .7;
+}
+
+.header__logged-out-button:focus {
+    outline: none;
+}
+
+.header__logged-out-button:active {
+    opacity: 1;
+    border: 1px solid #ffa6a6;
+    border-radius: 100px;
+}
+
+.header__logged-out-image {
+    margin-left: 5px;
 }
