--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,7 +1,8 @@
 .search-results__card {
     position: relative;
     width: 400px;
-    height: 576px;
+    display: flex;
+    flex-direction: column;
 }
 
 .search-results__save-button-wrapper {
@@ -10,6 +11,39 @@
     top: 24px;
     right: 24px;
     display: flex;
+}
+
+.search-results__card-tag {
+    box-sizing: border-box;
+    padding: 8px 12px;
+    min-width: 88px;
+    max-width: 90px;
+    height: 40px;
+    background-color: #FFFFFF;
+    position: absolute;
+    top: 24px;
+    left: 24px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-results__card-text {
+    margin: 0;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 24px;
+    color: #000000;
+    text-align: center;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -moz-box;
+    -moz-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
 }
 
 .search-results__save-button {
@@ -78,6 +112,7 @@
 }
 
 .search-results__image {
+    height: 272px;
     border-radius: 8px 8px 0 0;
 }
 
@@ -87,6 +122,7 @@
     padding: 20px 24px 20px 24px;
     background-color: #FFFFFF;
     border-radius: 0 0 8px 8px;
+    /* border: 1px solid red; */
 }
 
 .search-results__date {
@@ -107,6 +143,14 @@
     font-weight: 400;
     font-size: 26px;
     line-height: 30px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -moz-box;
+    -moz-box-orient: vertical;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .search-results__card-description {
@@ -135,4 +179,76 @@
     line-height: 20px;
     letter-spacing: 0.4px;
     text-transform: uppercase;
+}
+
+/* media */
+/* media */
+/* media */
+
+@media (max-width: 1400px) {
+    .search-results__card {
+        position: relative;
+        width: 350px;
+    }
+
+    .search-results__image {
+        height: 250px;
+    }
+
+    .search-results__save-button:hover {
+        background-image: url(./../../images/save_button.svg);
+    }
+
+    .search-results__delete:hover {
+        background-image: url(./../../images/delete.svg);
+    }
+
+    .search-results__save-button:hover ~ .search-results__save-button-description {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+@media (max-width: 1250px) {
+    .search-results__card {
+        position: relative;
+        width: 300px;
+    }
+
+    .search-results__image {
+        height: 200px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .search-results__card {
+        position: relative;
+        width: 224px;
+    }
+
+    .search-results__image {
+        height: 150px;
+    }
+}
+
+@media (max-width: 767px) {
+    .search-results__card {
+        position: relative;
+        width: 300px;
+    }
+
+    .search-results__image {
+        height: 250px;
+    }
+}
+
+@media (max-width: 690px) {
+    .search-results__card {
+        position: relative;
+        width: 288px;
+    }
+
+    .search-results__image {
+        height: 196px;
+    }
 }
