--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -16,6 +16,7 @@
 
 .search__title {
     margin: 0;
+    margin-bottom: 32px;
     padding: 0;
     font-family: 'RobotoSlab', Arial, sans-serif;
     font-size: 60px;
@@ -27,4 +28,47 @@
     font-size: 18px;
     line-height: 24px;
     font-weight: 400;
+    margin: 0;
+    margin-bottom: 64px;
+}
+
+/* media */
+/* media */
+/* media */
+
+@media (max-width: 900px) {
+    .search__wrapper {
+        width: 448px;
+    }
+
+    .search__title {
+        width: 385px;
+        margin-bottom: 16px;
+        font-size: 36px;
+        line-height: 40px;  
+    }
+
+    .search__description {
+        margin-bottom: 48;
+    }
+}
+
+@media (max-width: 690px) {
+    .search__wrapper {
+        padding: 30px 16px 32px;
+    }
+
+    .search__description {
+        margin-bottom: 122px;
+    }
+}
+
+@media (max-width: 690px) {
+    .search__title {
+        width: auto;
+    }
+
+    .search__wrapper {
+        width: 288px;
+    }
 }
