Верстка полностью готова. Ревью 1

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -98,6 +98,7 @@
     }
 
     .footer__container {
+        width: 650px;
         order: -1;
     }
 
@@ -132,5 +133,24 @@
         'link_yandex . .';
         grid-row-gap: 35px;
         margin-bottom: 40px;
+    }
+}
+
+
+@media (max-width: 670px) {
+    .footer__container {
+        width: 550px;
+    }
+}
+
+@media (max-width: 590px) {
+    .footer__container {
+        width: 450px;
+    }
+}
+
+@media (max-width: 480px) {
+    .footer__container {
+        width: auto;
     }
 }
