--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -1,8 +1,8 @@
 .search-in-process {
     min-height: 282px;
     background-color: #F5F6F7;
-    /* display: flex; */
-    display: none;
+    display: flex;
+    /* display: none; */
     flex-direction: column;
     align-items: center;
     padding-top: 80px;
