--- a/src/components/BurgerPopup/BurgerPopup.css
+++ b/src/components/BurgerPopup/BurgerPopup.css
@@ -65,6 +65,7 @@
     padding: 16px 16px 24px 16px;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
 }
 
 .burger-popup__link {
